--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Main Start Page 02</title>
+    <title>Jason🈹</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
